fix: improper projectcard gaps for mobile devices

--- a/src/Projects/Projects.module.css
+++ b/src/Projects/Projects.module.css
@@ -27,5 +27,6 @@
   }
   .projects {
     grid-template-columns: auto;
+    gap: 1rem;
   }
 }
